width: fit-content is not wrapped and has its overflowing content hidden. (affects popover usability) https://bugs.webkit.org/show_bug.cgi?id=279510 <rdar://problem/136219979>

Reviewed by Antti Koivisto.

Find out the actual available size for fit-content computation when the positing of
the box affects how much space there is for the box (out-of-flow boxes).

* LayoutTests/fast/block/fit-content-width-with-out-of-flow-box-expected.html: Added.
* LayoutTests/fast/block/fit-content-width-with-out-of-flow-box.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computePositionedLogicalWidthUsing const):

Canonical link: https://commits.webkit.org/285762@main